--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ beautifulsoup4 = "^4.12.2"
 flake8 = "^6.1.0"
 pytest = "^7.4.2"
 pytest-cov = "^4.1.0"
+pytest-playwright = "^0.4.3"
 
 [build-system]
 requires = ["poetry-core"]
