--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,6 +5,15 @@ on:
   - pull_request
 
 jobs:
+  dev-server:
+    runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - name: Run dev server
+          run: |
+            pip install poetry
+            make install
+            make dev
   build:
     runs-on: ubuntu-latest
     steps:
