--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           pip install poetry
           make install
-  dev-server: build
+  dev_server: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
