add googletrans to project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ psycopg2-binary = "^2.9.9"
 validators = "^0.22.0"
 requests = "^2.31.0"
 beautifulsoup4 = "^4.12.2"
+googletrans = "3.1.0a0"
 
 
 [tool.poetry.group.dev.dependencies]
